--- a/App/video-streaming/src/App.css
+++ b/App/video-streaming/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
+.navbar{
+  background: rgb(1, 108, 118)
+}
+.navbar-brand,.list_item{
+  color: #fff !important;
+  font-weight: 600;
+}
+.navbar-brand{
+  font-weight: bolder;
+}
+.list_item:hover{
+  color: #eaf89f !important;
+}
+footer ul li a{
+  color: #EDF1D6;
+  text-decoration: none;
+  font-weight: 600;
+}
+.custom-card{
+  height: 400px;
+}
+.scrolling-wrapper {
+  overflow-x: auto;
+  flex-wrap: nowrap;
+  padding-bottom: 20px;
+  position: relative;
+}
+.scrolling-wrapper::-webkit-scrollbar {
+  width: 8px; /* Adjust the width of the scrollbar */
+  background-color: transparent;
+  height: 4px;
+}
+.scrolling-wrapper::-webkit-scrollbar-thumb {
+  background-color: rgba(1, 108, 118, 0.6); /* Adjust the color and transparency of the scrollbar thumb */
+  border-radius: 4px; /* Adjust the border radius of the scrollbar thumb */
+}
+.scrolling-wrapper::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(1, 108, 118, 1); /* Adjust the color of the scrollbar thumb on hover */
+}
+.scrolling-wrapper::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.signup{
+  background-color: rgba(11, 232, 158, 0.796) !important;
+  color: rgb(1, 108, 118) !important;
+  border-radius: 10px;
+  position: absolute;
+  right: 50px;
+}
+.signup:hover{
+  background-color: rgb(5, 253, 170);
+}
+.Logo{
+  font-size: large !important;
+  font-weight: bolder !important;
+  color: rgb(211, 251, 255) !important;
+}
+.vid{
+  margin-left: 0;
+  padding-left: 0;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* swetha */
+.registerButton{
+  flex: 9;
+   height: 150%;
+   background-color: brown;
+   font-size: 15px;
+   border: none;
+   color: white;
+   cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+flex: 9;
+height: 150%;
+border: none;
+padding: 0px 80px;
+}
+span {
+ color: lightgray;
+ b {
+   color: white;
+ }
+}
+.Signup{
+cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* swetha 2 */
+form {
+  width: 300px;
+  height: 300px;
+  padding: 30px;
+  border-radius: 5px;
+  background-color: black;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
-}
+  input {
+    height: 40px;
+    border-radius: 5px;
+    background-color: gray;
+    color: white;
+    padding-left: 10px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+    &::placeholder {
+      color: lightgray;
+    }
   }
-  to {
-    transform: rotate(360deg);
+  .m{
+    color: rgba(140, 20, 246, 0.857);
   }
-}
+  .loginButton{
+    height: 40px;
+          border-radius: 5px;
+          background-color:brown;
+          color: white;
+          border: none;
+          font-size: 18px;
+          font-weight: 500;
+          cursor: pointer;
+  }
