some more changes

--- a/App/video-streaming/src/components/yasaswini/Blocks.css
+++ b/App/video-streaming/src/components/yasaswini/Blocks.css
@@ -1,4 +1,4 @@
-.btm{
+/* .btm{
     background-color: rgba(0, 0, 0, 0.637);
 }
 .div1{
@@ -96,4 +96,4 @@
 }
 .div6 a:hover{
     text-decoration: underline;
-}
+} */
