--- a/App/video-streaming/src/App.css
+++ b/App/video-streaming/src/App.css
@@ -1,5 +1,6 @@
 .navbar{
-  background: rgb(1, 108, 118)
+  background: rgb(1, 108, 118);
+  width: 100vw;
 }
 .navbar-brand,.list_item{
   color: #fff !important;
@@ -16,6 +17,9 @@ footer ul li a{
   text-decoration: none;
   font-weight: 600;
 }
+footer{
+  width: 100vw;
+}
 .custom-card{
   height: 400px;
 }
@@ -28,7 +32,7 @@ footer ul li a{
 .scrolling-wrapper::-webkit-scrollbar {
   width: 8px; /* Adjust the width of the scrollbar */
   background-color: transparent;
-  height: 4px;
+  height: 8px;
 }
 .scrolling-wrapper::-webkit-scrollbar-thumb {
   background-color: rgba(1, 108, 118, 0.6); /* Adjust the color and transparency of the scrollbar thumb */
@@ -151,4 +155,92 @@ form {
 .addform{
   background-color: #fff;
   height: 100%;
+}
+.image-container {
+  position: relative;
+  height: 70vh;
+}
+
+.image {
+  width: 100vw;
+  height: 70vh;
+}
+
+
+
+.play-button {
+  color: white;
+  background-color: transparent;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-container:hover .overlay {
+  opacity: 1;
+}
+
+.play-button {
+  border: none;
+  background: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+
+.btm {
+  width: 100vw;
+  margin:0;
+}
+
+.div4 {
+  background-color: rgb(149, 170, 172);
+  padding: 40px;
+  width: 100%;
+}
+
+.div5 {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.para1{
+  font-weight: bold;
+  font-size:70%;
+  margin-right:1%;
+  border-radius: 5px;
+  padding:0.5% 1% 0.5% 1%;
+  border:2px solid #099c77;
+  color:#034839;
+  box-shadow: 5px 8px #034839;
+}
+
+
+.hd1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.para3 {
+  font-size: 16px;
+  line-height: 1.5;
 }
